--- a/ol9/Vagrantfile
+++ b/ol9/Vagrantfile
@@ -82,7 +82,7 @@ Vagrant.configure("2") do |config|
   # SHELL
   # RUN EXTERNAL SHELL SCRIPT:
   # config.vm.provision "shell", path: "general_ol9.sh", privileged: false
-  # config.vm.provision "shell", path: "https://raw.githubusercontent.com/vmazurukrtelecom/shell_scripts/refs/heads/main/general_ol9.sh"
+  config.vm.provision "shell", path: "https://raw.githubusercontent.com/vmazurukrtelecom/shell_scripts/refs/heads/main/general_ol.sh"
   ## REBOOT:  
   config.vm.provision "shell", reboot: true, inline: <<-SHELL
   echo "rebooting!"
